// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with an expenses 1`] = `
<div>
  <h1>
    Viewing 1 expense totalling $1.95
  </h1>
</div>
`;

exports[`should render ExpensesSummary with no expenses 1`] = `
<div>
  <h1>
    Viewing 0 expenses totalling $0.00
  </h1>
</div>
`;
